--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -3,15 +3,33 @@
     <div class="grid-item grid-item-left">
         <app-pokemon-filter (pokemonSelected)="onPokemonSelected($event)"></app-pokemon-filter>
     </div>  
-    <div class="grid-item grid-item-right">
-      <div *ngIf="loading" class="loading-container">
-        <i class="pi pi-spin pi-spinner" style="font-size: 2rem"></i>
+    @if (!selectedPokemon && !loading) {
+      <div class="no-pokemon-message">
+        <h3>Selecciona un Pokémon para ver sus detalles</h3>
       </div>
-      <app-pokemon-details [pokemon]="pokemonDetails"></app-pokemon-details>
-    </div>
-  </div>
+    }
+    @if (loading) {
+      <div class="d-flex justify-content-center align-items-start" style="height: 100vh;">
+        <div class="spinner-grow text-secondary me-3" role="status">
+          <span class="sr-only"></span>
+        </div>
+        <div class="spinner-grow text-secondary me-3" role="status" style="animation-delay: 0.2s;">
+          <span class="sr-only"></span>
+        </div>
+        <div class="spinner-grow text-secondary" role="status" style="animation-delay: 0.4s;">
+          <span class="sr-only"></span>
+        </div>
+      </div>
+    }
+    @else {
+      <div class="grid-item grid-item-right">
+        <div *ngIf="loading" class="loading-container">
+          <i class="pi pi-spin pi-spinner" style="font-size: 2rem"></i>
+        </div>
+        <app-pokemon-details [pokemon]="pokemonDetails"></app-pokemon-details>
+      </div>
+    }
 </div>
-
 
 
 
